--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all individuals having contributed content to the repository
 
 
-Carl Birkenstock <>
+Carl Birkenstock <ccbirkenstock@gmail.com>
 Kgothatso Papo <ksp331@outlook.com>
